# Data-Science-Methodology

./: DSM_installation_testfile.ipynb  pyproject.toml
week 1/: DSM_ComputerClass0a.ipynb  DSM_ComputerClass0b.ipynb  DSM_ComputerClass1a.ipynb  DSM_assignment1.ipynb  DSM_assignment1_dataframe_empty.csv  weather_accident_data.xlsx
week 2/: DSM_ComputerClass2.ipynb  diabetes_new_observations.txt
week 3/: DSM_ComputerClass3.ipynb  DSM_assignment2.ipynb
week 4/: DSM_ComputerClass4.ipynb
week 5/: DSM_ComputerClass5.ipynb  DSM_assignment3.ipynb  DSM_assignment3_example_with_sklearn.ipynb
