[tool.poetry]
name = "dsm"
version = "0.1.0"
description = ""
authors = ["Albin Lindqvist <albin.lindqvist@hotmail.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
openpyxl = "^3.1.5"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
